--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -7,10 +7,13 @@
       <div class="box">
         <div class="sub-box">
           <div class="image">
-            <img src="https://miro.medium.com/max/250/{{item.virtuals.previewImage.imageId}}"/>
+            <img class="image" src="https://miro.medium.com/max/400/{{item.virtuals.previewImage.imageId}}"/>
+            <div class="tag-container">
+              <div *ngFor="let tag of item.virtuals.tags | slice:0:3" class="tag">{{tag.name}}</div>
+            </div>
           </div>
         </div>
-        <div class="sub-box">
+        <div class="sub-box descr">
           <div class="title">
             <h3>{{ item.title }}</h3>
           </div>
