--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -6,7 +6,7 @@
         max-width: 1170px;
         margin: 0 auto;
         display: grid;
-        grid-template-columns: 50% repeat(6, minmax(80px, 1fr)); // 3fr 2fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: repeat(1, minmax(150px, 1fr)) repeat(6, minmax(80px, 1fr)); // 3fr 2fr 1fr 1fr 1fr 1fr 1fr 1fr;
         grid-template-rows: 50px;
         grid-column-gap: 10px;
         color: #FFFFFF;
