rework landing page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,7 +3,7 @@
   <div class="box">
     <h3 class="section-subtitle">Hi There! I'm Ilyes Ait Hamouda</h3>
     <p class="description">
-      I'm a professional developer from Montréal, Canada.
+      <span class="identity"></span> from Montréal, Canada.
       I create beautiful professional websites using best practice accessibility.
       I enjoy turning complex problems into simple, beautiful and intuitive interface designs.
     </p>
