--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,9 @@
-<div class="profile-pic-container">
-  <img src="./assets/ilies.jpg" alt="profil-picture"/>
-</div>
+
 <div class="introduction-container">
-  <h1>Hi, I'm Ilyes</h1>
-  <span class="introduction-phrase"></span>
+<h1>let's <span class="erase">work</span> create together</h1>
+  <h2>ilyes ait hamouda</h2>
+  <span class="introduction-phrase">
+    fullstack website developer
+  </span>
 </div>
 
