--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,25 +1,44 @@
-.profile-pic-container {
-    img {
-        width:170px;
-        // border: 3px solid rgb(223, 223, 223);
-        border-radius: 50%;
-        -webkit-box-shadow: 0px -4px 21px 23px rgba(0,0,0,0.63);
--moz-box-shadow: 0px -4px 21px 23px rgba(0,0,0,0.63);
-box-shadow: 0px -4px 21px 23px rgba(0,0,0,0.63);
-    }
-}
-
 .introduction-container {
-    h1 {
-        font-size: 50px;
+    text-transform: uppercase;
+    width: 90vw;
+    max-width: 1200px;
+    .erase {
+        text-decoration: line-through;
+    }
+
+    font-size: 4vw;
+    line-height: 7vw;
+
+    h2 {
+        font-size: 2.5vw;
         font-weight: 700;
-        line-height: 60px;
         color: #FFFFFF;
+        white-space: pre-wrap;
+        line-height: 2vw;
+        margin: 0px;
     }
 
     .introduction-phrase {
-        font-size: 26px;
+        font-size: 1.3vw;
+        line-height: 2vw;
         color: rgb(191, 191, 191);
         font-weight: 700;
+        white-space: pre-wrap;
+        
+    }
+
+    /*mobile*/
+    @media only screen and (max-width: 760px) {
+        font-size: 30px;
+        line-height: 80px;
+        h2 {
+            font-size: 20px;
+            line-height: 0px;
+        }
+
+        .introduction-phrase {
+            font-size: 15px;
+            line-height: 0px;
+        }
     }
 }
