--- a/src/app/section/section.component.html
+++ b/src/app/section/section.component.html
@@ -1,10 +1,10 @@
-<div scrollableBackgroundImage class="section-container {{backgroundColorClass}}" [ngClass]="{'background-pic-m low-opacity' : sectionType === 'Home'}">
+<div class="section-container {{backgroundColorClass}}" [ngClass]="{'background-pic-m low-opacity' : sectionType === 'Home'}">
   <div *ngIf="sectionType === 'Home'" class="overlay-shadow"></div>
   <div class="section">
     <app-home       *ngIf="sectionType === 'Home'"></app-home>
     <app-about      *ngIf="sectionType === 'About'"></app-about>
     <app-portfolio  *ngIf="sectionType === 'Services'" [layoutType]="sectionType"></app-portfolio>
-    <app-quote      *ngIf="sectionType === 'Quote'"></app-quote>
+    <!--app-quote      *ngIf="sectionType === 'Quote'"></app-quote-->
     <app-portfolio  *ngIf="sectionType === 'Work'" [layoutType]="sectionType"></app-portfolio>
     <app-posts      *ngIf="sectionType === 'Posts'"></app-posts>
     <app-contact    *ngIf="sectionType === 'Contact'"></app-contact>
