--- a/src/app/section/section.component.scss
+++ b/src/app/section/section.component.scss
@@ -14,7 +14,6 @@
 }
 
 .overlay-shadow {
-    position: absolute;
     width:100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6);
@@ -23,7 +22,7 @@
 }
 
 .background-pic-m {
-    background-image: url('../../assets/background-2.jpg');
+    background-image: url('../../assets/background-5.jpg'); // background-3.gif
     background-position: 50% 0px;
     background-size: cover;
     height: 100vh;
@@ -31,8 +30,9 @@
     position: relative;
     padding: 0px;
     .section {
-        position: relative;
-        transform: translateY(-50%);
+        position: absolute;
         top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 }
