add experience section and centralize title

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -40,10 +40,11 @@
             .media-icons {
                 font-size: 20px;
                 border: 1px solid black;
-                width: 19px;
+                width: 38px;
                 text-align: center;
-                padding: 10px;
+                padding: 9px;
                 border-radius: 24px;
+                height: 38px;
             }
 
             a:hover { 
