--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,5 @@
 <div class="contact-container">
-    <div class="title-container">
-      <h2>Contact me</h2>
-    </div>
+    <app-title title="Contact me"></app-title>
     <div class="grid-container contact-icons">
       <div class="box box-glue contact-form-container">
         <div class="circle-wrapper">
