--- a/src/app/scroll-button/scroll-button.component.scss
+++ b/src/app/scroll-button/scroll-button.component.scss
@@ -7,8 +7,9 @@
     max-height: 40px;
     border-radius: 40px;
     top: 90%;
-    left: 49%;
-    padding: 5px 2px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 5px 10px;
     cursor: pointer;
 
     .scroll-button {
