--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,9 +1,9 @@
 
 <div class="box-list">
   <div class="box">
-    <h3 class="section-subtitle">Hi There! I'm Ilyes Ait Hamouda</h3>
+    <h3 class="section-subtitle">Hi There! I'm <span class="identity"></span></h3>
     <p class="description">
-      <span class="identity"></span> from Montréal, Canada.
+      i really need to rework this section.
       I create beautiful professional websites using best practice accessibility.
       I enjoy turning complex problems into simple, beautiful and intuitive interface designs.
     </p>
