--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,7 +1,5 @@
 <div class="posts-container">
-  <div class="title-container">
-    <h2>My Posts</h2>
-  </div>
+  <app-title title="my posts"></app-title>
   <div *ngIf="response && response.length > 0" class="grid-container">
     <ng-template ngFor let-item [ngForOf]="response" let-i="index" let-c="count">
       <div class="box">
