--- a/src/app/shared/button/button.component.scss
+++ b/src/app/shared/button/button.component.scss
@@ -1,12 +1,8 @@
 /* ~~~~~~~ INIT. BTN ~~~~~~~ */
-:host {
-    --def: white;
-    --inv: #333;
-}
 .btn:not(.disabled) {
-    border: 1px solid var(--inv);
+    border: 1px solid var(--color-dark);
 	position: relative;
-    color: var(--inv);
+    color: var(--color-dark);
     font-weight: 700;
 	text-transform: uppercase;
 	transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);	
@@ -38,10 +34,10 @@
 }
 
 .btn:not(.disabled):hover {
-	color: var(--def);
+	color: var(--color-light);
     transition-delay: .6s;
     & a:hover {
-        color: var(--def); 
+        color: var(--color-light); 
     }
     
 }
@@ -53,7 +49,7 @@
 }
 
 .btn:not(.disabled):hover:after {
-	background: var(--inv);
+	background: var(--color-dark);
     transition-delay: .4s;
     top: 0;
 	height: 100%;
@@ -66,7 +62,7 @@
 	left: 50%;
 	height: 100%;
 	width: 0;
-	border: 1px solid var(--inv);
+	border: 1px solid var(--color-dark);
 	border-left: 0;
 	border-right: 0;
 }
@@ -76,5 +72,5 @@
 	left: 0;
 	height: 0;
 	width: 100%;
-	background: var(--inv);
+	background: var(--color-dark);
 }
