--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-*:before, *:after {
+*, *:before, *:after {
 	box-sizing: border-box;
 }
 .bg-color-medium { background-color: rgb(250, 250, 250); }
@@ -7,6 +7,10 @@
 body { 
 	--color-a: #484848;
 	--color-a-hover: rgb(51, 51, 51);
+	--color-light: white;
+	--color-medium: #484848;
+	--color-med-dark: rgb(51, 51, 51);
+    --color-dark: #333;
 	margin: 0px; 
 	font-family: "Lato", sans-serif; 
 	color: #484848; 
