add testimony and content

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,9 +3,10 @@
   <div class="box">
     <h3 class="section-subtitle">Hi There! I'm <span class="identity"></span></h3>
     <p class="description">
-      i really need to rework this section.
-      I create beautiful professional websites using best practice accessibility.
-      I enjoy turning complex problems into simple, beautiful and intuitive interface designs.
+      I started my career as a web integrator and I quickly loved my experience, since then, I learned new things.
+      For me, it's not a job anymore ... it's a passion. It's with this curious and amusing spirit that I approach the different projects.
+      I played different roles in my career: web integrator, java developer, AEM developer, Angular, I was Devops lead where i helped with the integration of ansible, dockers.
+      Now i'm an Architect Designer. All these roles lead me where i'm now with deeper knowledge of web development and I feel that this is just the beginning of my journey ... :)
     </p>
     <div class="flex-box-container">
       <div class="flex-box"><a class="effect" href="mailto:iliesaithamouda@gmail.com"><i class="fas fa-envelope"></i> iliesaithamouda@gmail.com</a></div>
