--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -2,28 +2,109 @@
 <div class="timeline">
   <div class="container left">
     <div class="content content-left">
-      <h2>2014 - National Bank of Canada</h2>
-      <p>i was so happy to finally start my career in the finance world</p>
+      <h2>2019 - National Bank of Canada</h2>
+      <h4>Architect Designer</h4>
+      <div class="tags">
+        <span class="tag">Design pattern</span>
+        <span class="tag">DevOps</span>
+        <span class="tag">Agile SAFe</span>
+      </div>
+      
+      <p>
+        Playing a key role in the project lead me to become an Architect and Devops Lead. 
+        I started leading the team into the developement of new features by explaining to them the chosen design.
+        Being an Architect gave me a dfferent view of the development process of an application.
+        It made me realise what was done before starting to code, as thinking about the security, maintenability, traceability, logs, scalability, integrity of data, connectivity and much more.
+        It also helped me develop my leadership as I had to coach the developers and guide them through the development.
+        I just started digging my new role and i feel like there'S a long way ahead waiting.
+        Beside being an Architect, I am also responsible for the tools used to help the CI/CD. I,m part of the System team in an Agile SAFe Model.
+        I make things work :) and i love it.
+      </p>
     </div>
   </div>
   <div class="container right">
     <div class="content content-right">
+      <h2>2018 - National Bank of Canada</h2>
+      <h4>AEM developer</h4>
+      <div class="tags">
+        <span class="tag">AEM</span>
+        <span class="tag">java8</span>
+      </div>
+      <p>
+        As an eternal insatiable, I wanted to know more about AEM which was used to host our SPA application. 
+        With the departure of my colleague, i had to learn AEM the hard way, through AEM documentaiton and help of another team located elsewhere.
+        I love the challenges and so I started working hard to first maintain the applicaton, manage the deployments, versionning of the content, understanding the differents parts and roles in AEM
+        and finally add new features and even refactor the whole application to make it more scalable and maintainable.
+        I started to write documentation to make it easier for the next developer. I trained two other juniors that are now maintaining the app</p>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content content-left">
+      <h2>2016 - National Bank of Canada</h2>
+      <h4>Front-end Developer</h4>
+      <div class="tags">
+        <span class="tag">Angular</span>
+        <span class="tag">Sass</span>
+        <span class="tag">Agile</span>
+        <span class="tag">Scrum</span>
+      </div>
+      <p>
+        A new Project was starting and I was so excited to join the team. The stack was evolving, a revamp of an old application gave us the opportunity to choose a new framework and a different architecture.
+        We decided to use Angular as the front-end framework and REST micro-services for the back-end. I do remember starting with Angular 2 beta version. 
+        A lot has changed since and we upgraded our application every single release of Angular.
+        It made me understand and feel the angular evolution and roadmap. I had a lot of fun developing new screens with Angular, Sass (css framework), jasmine (recently Jest) for tests, learned a lot with npm and ng cli.
+      </p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content content-right">
+      <h2>2014 - National Bank of Canada</h2>
+      <h4>Java Developer</h4>
+      <div class="tags">
+        <span class="tag">java</span>
+        <span class="tag">jsp</span>
+        <span class="tag">spring MVC</span>
+      </div>
+      <p>I made my entrance into the financial world with this new job, i was looking for other challenges and the least that I can say is that I got what I deserve.
+        It was no longer a simple server exposing html pages compiled by a ColdFusion server. It's a whole complexe infrastucture where there's a tons of applications speaking differents languages
+        sharing a huge database protected by a security system as i never imagined. 
+        I had to maintain applications run with Struts, Spring MVC, Spring integration, gateways, queues etc. 
+      </p>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content content-left">
       <h2>2013 - Vortex Solutions</h2>
-      <p>what a pleasure to work with a young and energic team..</p>
+      <h4>Analyst Programmer</h4>
+      <div class="tags">
+        <span class="tag">AEM - coldfusion</span>
+      </div>
+      <p>
+        I join a fantastic company that create websites everyday. I started as a Web Integrator and quickly changed to a programmer Analyst where i found my passion.
+        working on websites with a graphic designer and the client, having their feedback and evolving through that.. 
+        I realised that i loved what I was doing and what a pleasure to work with a young and energic team..
+      </p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content content-right">
+      <h2>2013 - 24/7 Technologies</h2>
+      <h4>PHP developer</h4>
+      <div class="tags">
+        <span class="tag">PHP</span>
+      </div>
+      <p>
+        As an intern, I had to work on a project that allowed me to enhance my knowledge on differents modules of PHP and firebird.
+        I had to continue the developement of an unfinished application in a complex infrastucture with old technologies.
+        I was able to finish the project and make another small app that connect a user through a web interface and display data from an xml file.
+      </p>
     </div>
   </div>
   <div class="container left">
     <div class="content content-left">
       <h2>2013</h2>
-      <h3>CEGEP graduation</h3>
-      <p>I have finally completed my degree..</p>
+      <h4>CEGEP graduation</h4>
+      <p>Completion of my degree </p>
     </div>
   </div>
-  <div class="container right">
-    <div class="content content-right">
-      <h2>2012 - 24/7 Technologies</h2>
-      <p>As an intern, i had to work on a project that allowed me to enhance my knoledge in so many fields</p>
-    </div>
-  </div>
-  
 </div> 
