--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="introduction-container">
 <h1>let's <span class="erase">work</span> create together</h1>
-  <h2>ilyes ait hamouda</h2>
+  <h2>Ilyes Ait Hamouda</h2>
   <span class="introduction-phrase">
-    fullstack website developer
+    Fullstack Web Developer
   </span>
 </div>
 
