--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,9 @@
   <app-section id="Services" [sectionType]="'Services'" [backgroundColorClass]="'bg-color-light'"></app-section>
   <app-section id="Quote" [sectionType]="'Quote'" [backgroundColorClass]="'bg-color-medium'"></app-section>
   <app-section id="Work" [sectionType]="'Work'" [backgroundColorClass]="'bg-color-light'"></app-section>
-  <app-section id="Posts" [sectionType]="'Posts'" [backgroundColorClass]="'bg-color-medium'"></app-section>
-  <app-section id="Contact" [sectionType]="'Contact'" [backgroundColorClass]="'bg-color-light'"></app-section>
+  <!--app-section id="Testimony" [sectionType]="'Testimony'" [backgroundColorClass]="'bg-color-medium'"></app-section-->
+  <app-section id="Posts" [sectionType]="'Posts'" [backgroundColorClass]="'bg-color-light'"></app-section>
+  <app-section id="Contact" [sectionType]="'Contact'" [backgroundColorClass]="'bg-color-medium'"></app-section>
   <app-footer></app-footer>
   <app-scroll-top-button></app-scroll-top-button>
 </div>
