--- a/src/app/posts/posts.component.scss
+++ b/src/app/posts/posts.component.scss
@@ -51,11 +51,13 @@
             }
 
             .tag {
-                background-color: mistyrose;
+                background-color:#fafafa;
                 border-radius: 10px;
-                padding: 2px 8px;
+                padding: 3px 8px;
                 margin: 3px 5px;
                 float: left;
+                border: 1px solid#ddd;
+                line-height: 18px;
             }
 
             .external-link {
