--- a/src/app/section/section.component.html
+++ b/src/app/section/section.component.html
@@ -7,6 +7,7 @@
     <app-portfolio  *ngIf="sectionType === 'Services'" [layoutType]="sectionType"></app-portfolio>
     <app-quote      *ngIf="sectionType === 'Quote'"></app-quote>
     <app-portfolio  *ngIf="sectionType === 'Work'" [layoutType]="sectionType"></app-portfolio>
+    <app-testimony  *ngIf="sectionType === 'Testimony'"></app-testimony>
     <app-posts      *ngIf="sectionType === 'Posts'"></app-posts>
     <app-contact    *ngIf="sectionType === 'Contact'"></app-contact>
   </div>
