--- a/src/app/posts/posts.component.scss
+++ b/src/app/posts/posts.component.scss
@@ -9,6 +9,7 @@
         
         .box {
             flex-direction: column;
+            justify-content: center;
             display: grid;
             grid-gap: 40px;
             grid-template-columns: repeat(auto-fit, minmax(250px, 250px));
